First exercise (#8)
* Separating functions to more functions

* After code review with Aviv

* To review

* Fixes after code review with aviv

* Fixes after code review with aviv

* Fixes after code review with aviv

---------

Co-authored-by: Liron <lironattal@walla.com>